--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test html</title>
 </head>
 <body>
-    <h1>This is a test</h1>
+    <h1>This is a test. There are changes.</h1>
 </body>
 </html>
