--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test html</title>
+    <meta name="author" content="Steven Briskey">
+    <meta name="description" content="Assignment portal for Steven Briskey in WDD-230:
+                        Web Frontend Development at Brigham Young University-Idaho">
+    <title>Steven B. | home</title>
+    <link rel="stylesheet" href="css\homeStyle.css">
 </head>
 <body>
+    <header>
+        <div class="profile">
+            <img src="images\profile.jpg" alt="picture of Steven">
+            <h1>Steven Briskey</h1>
+        </div>
+    </header>
+
+
+
     <h1>This is a test. There are changes.</h1>
 </body>
 </html>
