--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="author" content="Steven Briskey">
     <meta name="description" content="Assignment portal for Steven Briskey in WDD-230:
                         Web Frontend Development at Brigham Young University-Idaho">
-    <title>Steven B. | home</title>
+    <title>Steven B. | Assignment Portal</title>
     <link rel="stylesheet" href="css\homeStyle.css">
+    <script src="js\footer.js" defer></script>
 </head>
 <body>
     <header>
@@ -17,9 +18,30 @@
             <h1>Steven Briskey</h1>
         </div>
     </header>
-
-
-
-    <h1>This is a test. There are changes.</h1>
+    <main>
+        <h2>
+            WDD 230: Assignment Portal
+        </h2>
+        <ul> 
+            <li>Lesson 02: <a href="index.html">Title</a></li>
+            <li>Lesson 03: <a href="index.html">Title</a></li>
+            <li>Lesson 04: <a href="index.html">Title</a></li>
+            <li>Lesson 05: <a href="index.html">Title</a></li>
+            <li>Lesson 06: <a href="index.html">Title</a></li>
+            <li>Lesson 07: <a href="index.html">Title</a></li>
+            <li>Lesson 08: <a href="index.html">Title</a></li>
+            <li>Lesson 09: <a href="index.html">Title</a></li>
+            <li>Lesson 10: <a href="index.html">Title</a></li>
+            <li>Lesson 11: <a href="index.html">Title</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>
+            &copy; <span id="copyDate"></span> .:|:. Steven Briskey .:|:. Idaho
+            
+            <div class="modified">Date modified: <span id="dateMod"></span></div>
+        </p>
+    </footer>
+  
 </body>
 </html>
