forwarde slslkdj;alk

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="Assignment portal for Steven Briskey in WDD-230:
                         Web Frontend Development at Brigham Young University-Idaho">
     <title>Steven B. | Assignment Portal</title>
-    <link rel="stylesheet" href="css\homeStyle.css">
-    <script src="js\footer.js" defer></script>
+    <link rel="stylesheet" href="css/homeStyle.css">
+    <script src="js/footer.js" defer></script>
 </head>
 <body>
     <header>
         <div class="profile">
-            <img src="images\profile.jpg" alt="picture of Steven">
+            <img src="images/profile.jpg" alt="picture of Steven">
             <h1>Steven Briskey</h1>
         </div>
     </header>
