--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Steven Briskey">
-    <meta name="description" content="Assignment portal for Steven Briskey in WDD-230:
-                        Web Frontend Development at Brigham Young University-Idaho">
+    <meta name="description" content="Assignment portal for Steven Briskey in WDD-230: Web Frontend Development at Brigham Young University-Idaho">
     <title>Steven B. | Assignment Portal</title>
     <link rel="stylesheet" href="css/homeStyle.css">
     <script src="js/footer.js" defer></script>
