--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Assignment portal for Steven Briskey in WDD-230: Web Frontend Development at Brigham Young University-Idaho">
     <title>Steven B. | Assignment Portal</title>
     <link rel="stylesheet" href="css/homeStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
     <script src="js/footer.js" defer></script>
 </head>
 <body>
@@ -35,11 +38,9 @@
         </ul>
     </main>
     <footer>
-        <p>
-            &copy; <span id="copyDate"></span> .:|:. Steven Briskey .:|:. Idaho
-            
-            <div class="modified">Date modified: <span id="dateMod"></span></div>
-        </p>
+        &copy; <span id="copyDate"></span> .:|:. Steven Briskey .:|:. Idaho
+        <div class="modified">Date modified: <span id="dateMod"></span></div>
+        
     </footer>
   
 </body>
